# wee-benchmarking-tool

./: .gitignore  DOCS.md  LICENSE  README.MD  README.md  freeze-requirements.txt  pyproject.toml  requirements.txt
aeb_cli/: evaluate.py  extract.py  main.py  tokenizer.py
aeb_cli/extractors/: __init__.py  run_boilerpy3.py  run_newsplease.py  run_resiliparse.py  run_resiliparseplain.py  run_trafilatura.py
datasets/scrappinghub_aeb/: ground-truth.json
output/base/: _goose3.json  boilerpy3.json  goose3.json  inscriptis.json  news-please.json  newspaper3k.json  resiliparse-plain.json  resiliparse.json  trafilatura.json
output/base-parallel/: boilerpy3.json  goose3.json  inscriptis.json  news-please.json  newspaper3k.json  resiliparse-plain.json  resiliparse.json  trafilatura.json
wee_cli/: evaluate.py  extract.py  main.py
wee_cli/extractors/: __init__.py  run_boilerpy3.py  run_goose.py  run_inscriptis.py  run_newspaper3k.py  run_newsplease.py  run_resiliparse.py  run_resiliparseplain.py  run_trafilatura.py
